juno/qa/apps/opensearch-dashboard/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opensearch-dashboard
  name: opensearch-dashboard
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: opensearch-dashboard
